# OpenSteamController

./: .gitignore  interpolate.py  pyproject.toml
Firmware/OpenSteamController/inc/: fw_cfg.h  haptic.h  trackpad.h
Firmware/OpenSteamController/src/: amplitude_samples.inc  haptic.c  monitor.c  trackpad.c  usb.c
