[project]
name = "OpenSteamController"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Waleed Khan", email = "me@waleedkhan.name"},
]
dependencies = [
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.13",
]
